--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@ h3{
 	font-size: 1.5em;
 }
 
+h4{
+	font-size: 1.2em;
+	padding: 8px;
+}
+
+p{
+	font-size: 1em;
+}
+
 /*================navbar===============*/
 
 nav div a img{
@@ -60,7 +69,7 @@ nav div a img{
 #button-form{
 	background-color: #0CBABA;
 	color: whitesmoke;
-	padding: 12px 32px 0px 32px;
+	padding: 6px 32px 0px 32px;
 	margin-top: 10px;
 	margin-left: 50px;
 	border-radius: 8px;
@@ -268,3 +277,44 @@ section div div img{
 #badge{
 	margin: 10px 10px;
 }
+
+/*=================animaciones================*/
+
+nav div ul li{
+	font-size: 1.3em;	
+}
+
+button{
+	font-size: 1.3em;
+}
+
+.scaleDown:hover{
+	transform: scalex(0.9) scaleY(0.9);
+	cursor: pointer;
+	transition: transform 0.3s;
+}
+
+.moveUp:hover{
+	transform: translateY(-4px);
+	cursor: pointer;
+	transition: transform 0.3s;
+}
+
+article:hover{
+	
+	background-color: white;
+	transform: scaleX(0.9) scaleY(0.9);
+	border-style: solid;
+	border-width: 0.3px;
+	border-color: lightgray;
+	transition-duration: 1.1s;
+}
+
+article a:hover{
+	background-color: #380036;
+	cursor: pointer;
+	transition: 1.5s;
+	color: white;
+	text-decoration: none;
+}
+
